--- a/src/styles/MainHeader.css
+++ b/src/styles/MainHeader.css
@@ -1,6 +1,10 @@
 .main-header {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  max-height: 100px;
+  background-color: var(--main-color);
 }
 
 .main-header ul {
